[package]
name = "tweet2md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
base64 = "0.21.2"
clap = { version = "3.x", features = ["derive"] }
dirs = "5.0.1"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
