[package]
name = "tweet2md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
base64 = "0.21.2"
clap = { version = "3.x", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
handlebars = "4.3.7"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
